# intranet

./: .dockerignore  .editorconfig  .env.example  .flake8  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
backend/core/: settings.py
django/: schema.yml
django/auth/: apps.py  docs.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
django/auth/migrations/: 0001_initial.py  0002_memberinvite.py
django/core/: urls.py
django/core/settings/: __init__.py  base.py  development.py  production.py
django/health/: docs.py  views.py
docker/: entrypoint.sh  start-dev-server.sh
